--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html
-    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html lang="en-us" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" dir="ltr">
 
 <head>
@@ -35,17 +34,17 @@
                 <p>For Fall 2022, this FAQ page will serve as the syllabus for Section 002 of STAT461-Analysis of
                     Variance.
                 </p>
-                <p>You may see sections marked with <mark>TBD</mark>. This indicates an area of syllabus where you (the
-                    students) will have direct impact on what will happen.</p>
+                <!--<p>You may see sections marked with <mark>TBD</mark>. This indicates an area of syllabus where you (the
+                    students) will have direct impact on what will happen.</p>-->
                 <h2>Frequently Asked Questions</h2>
                 <p>This page serves as a collection of the most common and most important Course Questions to help
                     you succeed. Be sure to look through the various sections. I will keep this page as up-to-date
                     as possible to address any questions that you and your classmates bring up as well as any
                     changes that we need to make.
                 </p>
-                <p>Date of Last Update: 8/19/2022</p>
+                <p>Date of Last Update: 9/1/2022</p>
                 <h3 id="catTop">Categories</h3>
-                <ul style="column-count: 2; -webkit-column-count: 2; -moz-column-count: 2; -o-column-count: 2">
+                <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
                     <li><a href="#keyInfo" class="bodylinks">Key Course Information</a></li>
                     <li><a href="#people" class="bodylinks">Key People</a></li>
                     <li><a href="#materials" class="bodylinks">Course Materials</a></li>
@@ -690,7 +689,8 @@
                                     <li>
                                         <strong>Exhibit Intellectual Integrity:</strong> Base your statements on what
                                         you understand and what you're still wrestling with. There is courage and power
-                                        in admitting to where you are struggling. Avoid making statements that reflect what
+                                        in admitting to where you are struggling. Avoid making statements that reflect
+                                        what
                                         you believe are what someone else wants to hear. Each of us should feel
                                         empowered to express your confusion and/or struggles with the material. This
                                         will help make the class much more productive for everyone.
@@ -889,29 +889,23 @@
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq31" class="toggle" type="checkbox">
-                        <label for="faq31" class="lbl-toggle" tabindex="0"><mark>TBD:</mark> What's the deal with
+                        <label for="faq31" class="lbl-toggle" tabindex="0">UPDATED: What's the deal with
                             submitting assignments late?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
-                                <p>
-                                    <mark>Note: these are what the Spring 2022 class discussed and voted upon. You will
-                                        have an opportunity to do the same.</mark>
-                                </p>
                                 <p>To ensure that I and my grading team can get feedback to you in as timely a fashion
                                     as possible, I ask that you turn your homework in on time. In the event that you
                                     need more time to complete homework there are two routes you may take:</p>
                                 <h3>Late Passes</h3>
                                 <p>
                                     If you have late passes available to you, you may use them give yourself an
-                                    additional 48 hours to complete the assignment. You may use a maximum of two late
-                                    passes on any assignment.
-                                    Not all assignments
-                                    will be eligible for using late passes (e.g., group assignment, quizzes, tests).
+                                    additional 24 hours (per late pass) to complete the assignment. You may use a
+                                    maximum of two late passes on any assignment. Not all assignments will be eligible
+                                    for using late passes (e.g., group assignment, quizzes, tests).
                                 </p>
                                 <p>
                                     You do not need to ask me to use a late pass. These are things you can automatically
-                                    use in the
-                                    homework system.
+                                    use in the homework system.
                                 </p>
                                 <h3>Extension Requests</h3>
                                 <p>You may also contact me about getting a limited extension. This is particularly
@@ -1187,26 +1181,47 @@
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq64" class="toggle" type="checkbox">
-                        <label for="faq64" class="lbl-toggle" tabindex="0"><mark>TBD:</mark> When are the tests-i.e., in
-                            class or
-                            in the evening?</label>
+                        <label for="faq64" class="lbl-toggle" tabindex="0">UPDATED: When are the tests-i.e., in
+                            class or in the evening?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
                                 <p>
-                                    <mark>The class will discuss and vote on if and how tests will occur duing the
-                                        semester.</mark>
+                                    The class has voted to have two tests during the semester (approximately at then end
+                                    of Unit 2 and Unit 3). Both tests will be "Take Home". You will need to complete
+                                    each in the stated testing window (~48 hours) but you will not need to do the entire
+                                    test in one sitting. Additionally, the tests will be open course materials. Open
+                                    course materials does NOT include any of the following: working with other
+                                    individuals (in the class or not), using the internet to search for answers and/or
+                                    additional information (e.g., "googling"), using websites which encourage/enable
+                                    violations of academic integrity (e.g., Chegg, CourseHero, etc.), posting test
+                                    materials (a violation of AI policies and Copyright law). Additionally, past
+                                    homework assignments will be unaccessible during the testing window. This is to
+                                    minimize the risk that you're test answers do not get correctly submitted
+                                    (something which can happen if you have multiple MOM assignments open at the same
+                                    time).
                                 </p>
+                                <p>
+                                    Allowed course materials include:
+                                </p>
+                                <ul>
+                                    <li>Your personal notes (handwritten or typed; printed or digital)</li>
+                                    <li>Instructor posted course slides (in Canvas)</li>
+                                    <li>Other instructor posted materials in Canvas</li>
+                                    <li>Class video recordings posted in Canvas</li>
+                                    <li>The course textbook</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq65" class="toggle" type="checkbox">
-                        <label for="faq65" class="lbl-toggle" tabindex="0"><mark>TBD:</mark> When is the final
+                        <label for="faq65" class="lbl-toggle" tabindex="0">UPDATED: When is the final
                             exam?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
                                 <p>
-                                    <mark>The class will discuss and vote on if and there will be a final exam.</mark>
+                                    The class has voted NOT to have a final exam. Note: there is still a course (group)
+                                    project which will be due during Finals Week.
                                 </p>
                             </div>
                         </div>
@@ -1649,31 +1664,23 @@
                                 </p>
                                 <p>
                                     Academic integrity is the pursuit of scholarly activity in an open, honest and
-                                    responsible manner.
-                                    Academic integrity is a basic guiding principle for all academic activity at The
-                                    Pennsylvania State
-                                    University, and all members of the University community are expected to act in
-                                    accordance with this
-                                    principle. Consistent with this expectation, the University’s Code of Conduct states
-                                    that all students
+                                    responsible manner. Academic integrity is a basic guiding principle for all academic
+                                    activity at The Pennsylvania State University, and all members of the University
+                                    community are expected to act in accordance with this principle. Consistent with
+                                    this expectation, the University’s Code of Conduct states that all students
                                     should act with personal integrity, respect other students’ dignity, rights and
-                                    property, and help create
-                                    and maintain an environment in which all can succeed through the fruits of their
-                                    efforts. Academic
-                                    integrity includes a commitment by all members of the University community not to
-                                    engage in or tolerate
-                                    acts of falsification, misrepresentation or deception. Such acts of dishonesty
-                                    violate the fundamental
-                                    ethical principles of the University community and compromise the worth of work
-                                    completed by others.
+                                    property, and help create and maintain an environment in which all can succeed
+                                    through the fruits of their efforts. Academic integrity includes a commitment by all
+                                    members of the University community not to engage in or tolerate acts of
+                                    falsification, misrepresentation or deception. Such acts of dishonesty violate the
+                                    fundamental ethical principles of the University community and compromise the worth
+                                    of work completed by others.
                                 </p>
                                 <p>
                                     Please be aware that plagiarism, including self plagiarism, collusion, ghost
-                                    writing,
-                                    and cheating are all violations of Academic Integrity. If you have any questions,
-                                    please come talk to me <strong>before</strong> you submit an assignment. I can't
-                                    help you
-                                    after you submit the work.
+                                    writing, and cheating are all violations of Academic Integrity. If you have any
+                                    questions, please come talk to me <strong>before</strong> you submit an assignment.
+                                    I can't help you after you submit the work.
                                 </p>
                             </div>
                         </div>
@@ -1686,9 +1693,8 @@
                                 <p>
                                     Self-plagiarism occurs whenever a person re-uses old work with minor revisions. For
                                     example, if you did a data analysis project in Stat 200 and then submitted that for
-                                    an
-                                    assignment in Stat 461, you're committing self-plagiarism. All work submitted for a
-                                    grade or feedback in a course should not be used for another course.
+                                    an assignment in Stat 461, you're committing self-plagiarism. All work submitted for
+                                    a grade or feedback in a course should not be used for another course.
                                 </p>
                                 <p>
                                     If you want to merge projects from 2 (or more courses) into a single project that
@@ -1709,8 +1715,7 @@
                                     <strong>Collusion</strong> is when a group of students work together and submit
                                     <em>essentially identical</em> copies of the same assignment as individuals when
                                     the assignment is <strong>not</strong> a group assignment. This is a form of
-                                    cheating and
-                                    violates Academic Integrity.
+                                    cheating and violates Academic Integrity.
                                 </p>
                                 <p>
                                     <strong>Group work</strong> occurs when the instructor gives an activity or
@@ -1730,12 +1735,11 @@
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq76" class="toggle" type="checkbox">
-                        <label for="faq76" class="lbl-toggle" tabindex="0"><mark>TBD:</mark> What are the consequences
-                            of
-                            violating Academic Integrity policies?</label>
+                        <label for="faq76" class="lbl-toggle" tabindex="0">UPDATED: What are the consequences
+                            of violating Academic Integrity policies?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
-                                <p>The following is what the Spring 2022 classes decided upon:</p>
+                                <p>Results of the Fall 2022 Class Voting:</p>
                                 <table rules="all" border="1pt">
                                     <caption>Consequences/Sanctions for Violating Academic Integrity</caption>
                                     <tr>
@@ -1746,21 +1750,21 @@
                                     </tr>
                                     <tr>
                                         <th scope="row">Minor</th>
-                                        <td>Warning</td>
-                                        <td>Drop Item Grade 1 level</td>
-                                        <td>0 on Assignment</td>
+                                        <td>Warning & an opportunity to redo the assignment/affected item(s)</td>
+                                        <td>0 for Assignment Grade </td>
+                                        <td>0 for Assignment Grade & Drop Course Grade 1 level</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">Moderate</th>
-                                        <td>Warning</td>
-                                        <td>0 on Assignment</td>
-                                        <td>0 on the Assignment and drop Course Grade 1 level</td>
+                                        <td>0 for Assignment Grade</td>
+                                        <td>0 for Assignment Grade & Drop Course Grade 1 level</td>
+                                        <td>Recommend a Grade of XF for the course to the Committee</td>
                                     </tr>
                                     <tr>
                                         <th scope="row">Major</th>
                                         <td>0 on Assignment</td>
-                                        <td>Highest Course Grade Possible is now C</td>
-                                        <td>Grade of XF for the course</td>
+                                        <td>0 for Assignment Grade & Drop Course Grade 1 level</td>
+                                        <td>Recommend a Grade of XF for the course to the Committee</td>
                                     </tr>
                                 </table>
                                 <p>
@@ -1771,10 +1775,9 @@
                                 </p>
                                 <p>
                                     Issues involving violations copyright law (e.g., posting assignments to websites
-                                    such as Chegg,
-                                    CourseHero, etc.) will not only constitute a Major violation of the Academic
-                                    Integrity policies of this course,
-                                    but will also entail a separate violation of the Penn State Student Code of Conduct.
+                                    such as Chegg, CourseHero, etc.) will not only constitute a Major violation of the
+                                    Academic Integrity policies of this course, but will also entail a separate
+                                    violation of the Penn State Student Code of Conduct.
                                 </p>
                             </div>
                         </div>
