--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -31,7 +31,7 @@
                     for each course that I teach. I did so with two goals in mind: 1) I want this page to be useful to
                     my students and myself, and 2) to help set a positive tone for the semester.
                 </p>
-                <p>For Fall 2022, this FAQ page will serve as the syllabus for Section 002 of STAT461-Analysis of
+                <p>For Spring 2023, this FAQ page will serve as the syllabus for Section 002 and Section 003 of STAT461-Analysis of
                     Variance.
                 </p>
                 <!--<p>You may see sections marked with <mark>TBD</mark>. This indicates an area of syllabus where you (the
@@ -42,7 +42,7 @@
                     as possible to address any questions that you and your classmates bring up as well as any
                     changes that we need to make.
                 </p>
-                <p>Date of Last Update: 9/1/2022</p>
+                <p>Date of Last Update: 1/9/2023</p>
                 <h3 id="catTop">Categories</h3>
                 <ul style="column-count: 3; -webkit-column-count: 3; -moz-column-count: 3; -o-column-count: 3">
                     <li><a href="#keyInfo" class="bodylinks">Key Course Information</a></li>
@@ -64,8 +64,14 @@
                         <div class="content-inner">
                             <h3>Section 2</h3>
                             <p>
-                                Time: Mondays, Wednesdays, and Fridays 3:35pm to 4:25pm<br>
-                                Place: Boucke 112<br>
+                                Time: Mondays, Wednesdays, and Fridays 1:25pm to 2:15pm<br>
+                                Place: MF-Bouckout Lab 213, W-Boucke 112<br>
+                                Modality: In person
+                            </p>
+                            <h3>Section3</h3>
+                            <p>
+                                Time: Tuesdays, Thursdays, and Fridays 12:20pm to 1:10pm<br>
+                                Place: TR-Huck Life Sciences 011, F-Boucke 112<br>
                                 Modality: In person
                             </p>
                         </div>
@@ -76,9 +82,8 @@
                     <label for="faq68" class="lbl-toggle" tabindex="0">When/Where are Student Hours?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                            <p>I will be sending out a poll for days and times for Fall 2022 Student Hours. Student
+                            <p>I will be sending out a poll for days and times for Spring 2023 Student Hours. Student
                                 Hours will be held in either Thomas 424/425 or Thomas 425A.<br />
-                                I will also set up a Microsoft Teams page for everyone to use. <br>
                                 As always, you can email me to set up additional times. <br />
                                 In the event that I need to cancel or move Student Hours, I will post an announcemnt.
                             </p>
@@ -128,20 +133,21 @@
                 </div>
                 <div class="wrap-collabsible">
                     <input id="faq15" class="toggle" type="checkbox">
-                    <label for="faq15" class="lbl-toggle" tabindex="0">What are the Fall 2022 Important Dates?</label>
+                    <label for="faq15" class="lbl-toggle" tabindex="0">What are the Spring 2023 Important Dates?</label>
                     <div class="collapsible-content">
                         <div class="content-inner">
-                            <p>Important Dates for the Fall 2022 Semester</p>
+                            <p>Important Dates for the Spring 2023 Semester</p>
                             <ul>
-                                <li>Classes Begin on Monday, August 22, 2022</li>
-                                <li>Regular Drop Deadline is Saturday, August 27, 2022</li>
-                                <li>Regular Add Deadline is Sunday, August 28, 2022</li>
-                                <li>Labor Day-No Classes-Monday, September 5, 2022</li>
-                                <li>Final Exam Conflict Filing Period is September 26 to October 16, 2022</li>
-                                <li>Late Add/Drop Deadline is Friday, November 11, 2022</li>
-                                <li>Thanksgiving Holiday-No Classes-November 20-November 26, 2022</li>
-                                <li>Withdrawal Deadline is Friday, December 9, 2022</li>
-                                <li>Classes End on Friday, December 9, 2022</li>
+                                <li>Classes Begin on Monday, January 9, 2023</li>
+                                <li>Regular Drop Deadline is Saturday, January 14, 2023</li>
+                                <li>Regular Add Deadline is Sunday, January 15, 2023</li>
+                                <li>Martin Luther King Day-No Classes-Monday, January 16, 2023</li>
+                                <li>Final Exam Conflict Filing Period is February 13 to March 5, 2023</li>
+                                <li>Spring Break-No Classes-March 5 through March 12, 2023</li>
+                                <li>Late Add/Drop Deadline is Friday, April 7, 2023</li>
+                                <li>Withdrawal Deadline is Friday, April 28, 2023</li>
+                                <li>Classes End on Friday, April 28, 2022</li>
+                                <li>Final Exam Week: May 1 through May 5, 2023</li>
                             </ul>
                         </div>
                     </div>
@@ -396,14 +402,13 @@
                             <ul>
                                 <li>
                                     <a href="https://cran.r-project.org/" target="_blank" class="bodylinks">R
-                                        (recommended, use version 4.2.1 or later)</a>
+                                        (recommended, use version 4.2.2 or later)</a>
                                     (FREE; Available for Windows, Mac, and Linux Machines)
                                 </li>
                                 <li>
-                                    <a href="https://rstudio.com/products/rstudio/download/#download" target="_blank"
-                                        class="bodylinks">RStudio (recommended, use version 2022.07.1+)</a> (FREE;
-                                    Available
-                                    for Windows, Mac, and Linux Machines)
+                                    <a href="https://posit.co/download/rstudio-desktop/" target="_blank"
+                                        class="bodylinks">RStudio (recommended, use version 2022.12.0+)</a> (FREE;
+                                    Available for Windows, Mac, and Linux Machines)
                                 </li>
                                 <li>
                                     I've written an R script that you can run to check if you have the appropriate
@@ -647,9 +652,9 @@
                                     <strong>Design:</strong> Students will develop their skills for developing
                                     experimental and observational studies.
                                 </li>
-                                <li>
+                                <!---<li>
                                     <mark><strong>Metacognition & Groupwork:</strong> TBA</mark>
-                                </li>
+                                </li>--->
                             </ol>
                         </div>
                     </div>
@@ -664,7 +669,7 @@
                                 objectives. To view the full list of learning outcomes, organized by course objective,
                                 please see the following PDF.</p>
                             <p>
-                                <a href="https://www.dropbox.com/s/rybsqgugzsf23v8/STAT461_LearningOutcomes.pdf?dl=0"
+                                <a href="https://www.dropbox.com/s/6vjuv6t28vbpkbr/STAT461_LearningOutcomes.pdf?dl=0"
                                     target="_blank" , class="bodylinks">Fall 2022 STAT 461 Learning Outcomes</a>
                             </p>
                         </div>
@@ -723,8 +728,7 @@
                             <div class="content-inner">
                                 <p>
                                     Many people might go by a name in daily life that is different from their legal
-                                    name.
-                                    In this classroom, we seek to refer to people by the names that they go by. Pronouns
+                                    name. In this classroom, we seek to refer to people by the names that they go by. Pronouns
                                     can be a way to affirm someone's gender identity, but they can also be unrelated to
                                     a person's identity. They are simply a public way in which to refer to a person in
                                     place of their name (e.g., "he" or "she" or "they" or "ze" or something else). In
