--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -34,8 +34,8 @@
                 <p>For Spring 2023, this FAQ page will serve as the syllabus for Section 002 and Section 003 of STAT461-Analysis of
                     Variance.
                 </p>
-                <!--<p>You may see sections marked with <mark>TBD</mark>. This indicates an area of syllabus where you (the
-                    students) will have direct impact on what will happen.</p>-->
+                <p>You may see sections marked with <mark>TBD</mark>. This indicates an area of syllabus where you (the
+                    students) will have direct impact on what will happen.</p>
                 <h2>Frequently Asked Questions</h2>
                 <p>This page serves as a collection of the most common and most important Course Questions to help
                     you succeed. Be sure to look through the various sections. I will keep this page as up-to-date
@@ -182,11 +182,12 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>
-                                I have prepared a <em>very tentative</em> course schedule based upon past semesters.
+                                I have prepared a <em>tentative</em> course schedule based upon past semesters. I will do my best to update the schedules as the semester progresses.
                             </p>
                             <p>
-                                <a href="https://www.dropbox.com/s/ig26edp3zetc8lk/Fall2022Schedule_stat461.pdf?dl=0"
-                                    class="bodylinks" target="_blank">Fall 2022 Schedule</a>
+                                <a href="https://www.dropbox.com/s/rt0xt43rjl9unpn/Spring2023_Stat461Schedule_MWF.pdf?dl=0"
+                                    class="bodylinks" target="_blank">Spring 2023-MWF Schedule</a><br/>
+                                <a href="https://www.dropbox.com/s/rt0xt43rjl9unpn/Spring2023_Stat461Schedule_MWF.pdf?dl=0" class="bodylinks" target="_blank">Spring 2023-TRF Schedule</a>
                             </p>
                         </div>
                     </div>
