--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -735,7 +735,7 @@
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq31" class="toggle" type="checkbox">
-                        <label for="faq31" class="lbl-toggle" tabindex="0">UPDATED: What's the deal with submitting assignments late?</label>
+                        <label for="faq31" class="lbl-toggle" tabindex="0" id="lateWork">UPDATED: What's the deal with submitting assignments late?</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
                                 <p>
