--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -714,21 +714,20 @@
                     </div>
                     <div class="wrap-collabsible">
                         <input id="faq30" class="toggle" type="checkbox">
-                        <label for="faq30" class="lbl-toggle" tabindex="0">I heard you record and post videos of class.
-                            Does this mean I can skip class? (Class Attendance Policy)</label>
+                        <label for="faq30" class="lbl-toggle" tabindex="0" id="attendancePolicy">I heard you record and post videos of class. Does this mean I can skip class? (Class Attendance Policy)</label>
                         <div class="collapsible-content">
                             <div class="content-inner">
                                 <p>
-                                    I've been recording my classes since ~2014. These recordings are of my computer screen and audio of classroom. These recordings are posted for you to access through Canvas;they are not publicly available. In addition to sharing the videos with you, I use them to reflect upon the class and my teaching. Please do not use these videos as a substitute for attending class. If we begin having mass attendance issues, I will revisit  making such videos.
+                                    I've been recording my classes since ~2014. These recordings are of my computer screen and audio of classroom. These recordings are posted for you to access through Canvas;they are not publicly available. In addition to sharing the videos with you, I use them to reflect upon the class and my teaching. Please do not use these videos as a substitute for attending class. If we begin having mass attendance issues, I will revisit making such videos.
                                 </p>
                                 <p>
-                                    Whether you attend class is up to you; I'm not going to force you to come to class.  However, I will point out that we have plenty of evidence from education research that shows when a student's attendance percentage drops below 80%, they fall behind their peers. In my own courses, I have noticed that when students fall below 80% their work is lower in quality and their conveyed meanings are not as productive.
+                                    I will take attedance every day through one of a number of different methods (e.g., roll call, a Socrative activity, an exit ticket, a group reporting sheet, etc.). Attendance <strong><em>is not graded</em></strong>. Whether you attend class is up to you; I'm not going to force you to come to class.  However, I will point out that we have plenty of evidence from education research that shows when a student's attendance percentage drops below 80%, they fall behind their peers. In my own courses, I have noticed that when students fall below 80% their work is lower in quality and their conveyed meanings are not as productive.
                                 </p>
                                 <p>
-                                    If you need to miss class, send me a quick note. You do not need to share details with me. If you will be absent from class due to a religious observance or practice as well  as participating in an university sanctioned event/activity, you are responsible for informing me during the first week of class. Additionally, you'll want to make use of the <a href="https://undergrad.psu.edu/aappm/class_absence_accessible.pdf" class="bodylinks" target="_blank">University's Class Absence Form</a>. I will work with you on alternative and reasonable arrangements for any time missed.
+                                    I do not require students to let me know they are missing nor do I ask that you share with me the details on why you're absent. If you will be absent from class due to a religious observance or practice as well  as participating in an university sanctioned event/activity, you are responsible for informing me during the first week of class. Additionally, you'll want to make use of the <a href="https://undergrad.psu.edu/aappm/class_absence_accessible.pdf" class="bodylinks" target="_blank">University's Class Absence Form</a>. I will work with you on alternative and reasonable arrangements for any time missed.
                                 </p>
                                 <p>
-                                    COVID-19 policies for attendance are still in effect and we'll handle such issues on a case-by-case basis.
+                                    In the event where COVID-19 policies for attendance apply, we'll handle such issues on a case-by-case basis.
                                 </p>
                             </div>
                         </div>
@@ -739,7 +738,7 @@
                         <div class="collapsible-content">
                             <div class="content-inner">
                                 <p>
-                                    To ensure that I and my grading team can get feedback to you in as timely a fashion as possible, I ask that you turn your homework in on time. The class voted that assignments would typically be due by 11:59pm (ET). In the event that you need more time to complete homework there are two routes you may take:
+                                    To ensure that I and my grading team can get feedback to you in as timely a fashion as possible, I ask that you turn your homework in on time. The class voted that assignments would typically be due by 11:59pm (ET). In the event that you need more time to complete homework there are three routes you may take:
                                 </p>
                                 <h3>Late Passes</h3>
                                 <p>
