--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -749,7 +749,7 @@
                                 </p>
                                 <h3>Extension Requests</h3>
                                 <p>
-                                    You may also contact me about getting a limited extension. This is particularly useful if you are out of late passes, need more than 48 (96) hours, or are dealing with an assignment not eligible for late passes. The process to request an extension is the following:
+                                    You may also contact me about getting a limited extension. This is particularly useful if you are out of late passes, need more than 48 hours, or are dealing with an assignment not eligible for late passes. The process to request an extension is the following:
                                 </p>
                                 <ul>
                                     <li>Contact me a minimum of one day/24 hours before the posted due date of the assignment.</li>
